styles/layouts/accordianLayout.module.css
.accordian {
  overflow: hidden;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  margin: 0;
  padding: 0;
  border-radius: 5px 5px 0 0;
}

.parent {
  display: flex;
  justify-content: space-between;
  align-items: stretch;
  border-radius: 5px 5px 0 0;
  margin: 0;
  padding: 0;
  min-height: 50px;
}

.body {
  overflow: hidden;
  max-height: 10000px;
  transition: max-height 300ms linear, opacity 400ms linear;
}

.hidden {
  max-height: 0;
  opacity: 0;
}

